--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,5 @@ crashlytics-build.properties
 [Aa]ssets/[Ss]treamingAssets/aa.meta
 [Aa]ssets/[Ss]treamingAssets/aa/*
 Eco Warrior/Assets/Fonts/28 Days Later SDF.asset
+Eco Warrior/Assets/TextMesh Pro/Resources/Fonts & Materials/LiberationSans SDF - Fallback.asset
+Eco Warrior/Assets/Fonts/28 Days Later SDF.asset
