gitignore update and scene game obj changes

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ crashlytics-build.properties
 Eco Warrior/Assets/Fonts/28 Days Later SDF.asset
 Eco Warrior/Assets/TextMesh Pro/Resources/Fonts & Materials/LiberationSans SDF - Fallback.asset
 Eco Warrior/Assets/Fonts/28 Days Later SDF.asset
+Eco Warrior/Assets/Fonts/28 Days Later SDF.asset
