gitignore adding font asset fallbacks

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@ Eco Warrior/Assets/Fonts/28 Days Later SDF.asset
 Eco Warrior/Assets/TextMesh Pro/Resources/Fonts & Materials/LiberationSans SDF - Fallback.asset
 Eco Warrior/Assets/Fonts/28 Days Later SDF.asset
 Eco Warrior/Assets/Fonts/28 Days Later SDF.asset
+Eco Warrior/Assets/TextMesh Pro/Resources/Fonts & Materials/LiberationSans SDF - Fallback.asset
