fire damage bug fix and gitignire additions of font assets

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,5 @@ Eco Warrior/Assets/TextMesh Pro/Resources/Fonts & Materials/LiberationSans SDF -
 Eco Warrior/Assets/Fonts/28 Days Later SDF.asset
 Eco Warrior/Assets/Fonts/28 Days Later SDF.asset
 Eco Warrior/Assets/TextMesh Pro/Resources/Fonts & Materials/LiberationSans SDF - Fallback.asset
+Eco Warrior/Assets/TextMesh Pro/Resources/Fonts & Materials/LiberationSans SDF - Fallback.asset
+Eco Warrior/Assets/Fonts/28 Days Later SDF.asset
